Fixes #6; Shows login/signup in the middle, also on mobile

--- a/MediaPortal/src/app/login/login.component.scss
+++ b/MediaPortal/src/app/login/login.component.scss
@@ -1,7 +1,7 @@
 .logindiv {
+  max-width: 50%;
   display: flex;
   justify-content: center;
-  padding: 10% 0px;
 }
 
 .mat-form-field {
